# trabalho-pratico

./: .gitignore  Aresta.cpp  Aresta.h  CMakeLists.txt  FASE1.md  Grafo.cpp  Grafo.h  Interface.cpp  Interface.h  No.cpp  No.h  README.md  entrada.txt  main.cpp
Arquivos/: Teste3.txt  bipartido.txt  entrada.txt  grafo_10000_4.txt  grafos.txt  teste.txt  teste2.txt
Arquivos/InstânciasTeste/pequenas/: a1
Arquivos/instancias/grandes/: abb313GPIA.txt  inithx.i.1.col.txt  inithx.i.2.col.txt  inithx.i.3.txt
Arquivos/instancias/medias/: le450_15b.txt  le450_15c.txt  le450_15d.txt
Arquivos/instancias/pequenas/: huck.col.txt  queen5_5.txt  queen6_6.txt  queen7_7.col.txt
Grafo/: Aresta.cpp  Aresta.h  Grafo.cpp  Grafo.h  GrafoColoracao.cpp  ListaNo.cpp  ListaNo.h  ListaNoItem.h  No.cpp
IO/: Interface.cpp  Interface.h  ManipuladorArquivo.cpp  ManipuladorArquivo.h
Lista/: ListaNo.cpp  ListaNo.h  ListaNoItem.cpp  ListaNoItem.h
Utils/: main.cpp
br.ufjf/: main.cpp
br.ufjf/grafo/: Aresta.cpp  Aresta.h  Grafo.cpp  Grafo.h  Vertice.cpp  Vertice.h
